--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
 <body>
 
     <div class="wrapper">
-        <div><h1 id="heading">Velkommen til denne fantastiske siden</h1>
-            <h5>Prosjektoppgave 1, webutvikling</h5>
-            <p>Jeg er skikkelig i glad i roboter, i alle former og fasonger. Men mest firkant form. Noe bildene nedenfor gjenspeiler. 
-                <br><br>Hold musepekeren over bildene for en overraskelse. OG trykk på bildene for ytterligere overrasker!
-            </p>
+        <div><h1 id="heading">Robots</h1>
+            
         </div>
 
         <div class="wrapper_row">
@@ -70,6 +67,7 @@
             <button href="#tekstfelt" id="btnDokumentasjon" type="button" onclick="vis()">Dokumentasjon</button>
         </div>
         <div>
+            <p>Dokumentasjon for øving 1 i IT2810 - Webutvikling </p>
             <p id="tekstfelt"></p>   <!-- brukes for dokumentasjon -->
         </div>
       </div>
