--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="wrapper">
-        <div><h1 id="heading">Robots</h1>
+        <div><h1 id="heading" style="text-align: center">Robots</h1>
             
         </div>
 
@@ -58,7 +58,7 @@
                     <canvas id="canvas" width="500vw" height="534vw">
                         Your browser does not support the HTML5 canvas tag.
                     </canvas>
-                    <p>Bildet er laget med canvas apiet</p>
+                    <p>Bildet er laget med canvas apiet. Trykk på bildet for animasjon</p>
                 </div>
             </div>
         </div>
