--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="wrapper_row">
-            <div><h2>Flying Robot</h2>
+            <div><h2 style="text-align: center">Flying Robot</h2>
                 <svg viewBox="0 0 100 100">
                     <rect class="background" width="100%" height="100%" fill="lightblue"/>
                     <!-- hode -->
@@ -53,7 +53,7 @@
                 <p>Bildet er laget med svg, hold musepekeren over bildet for en overraskelse </p>
             </div>
 
-            <div><h2>Wall-E</h2>
+            <div><h2 style="text-align: center">Wall-E</h2>
                 <div>
                     <canvas id="canvas" width="500vw" height="534vw">
                         Your browser does not support the HTML5 canvas tag.
